# fast-keyboard-sounds

./: Cargo.toml  README.md
src/: config.rs  main.rs
